--- a/web/simple/index.html
+++ b/web/simple/index.html
@@ -8,6 +8,10 @@
 </head>
 <body style="margin: 0; padding: 0;">
 <div id="map" style="width: 100%; height: 100%; position:fixed;"></div>
+<div id="popup" class="ol-popup">
+  <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+  <div id="popup-content"></div>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.20.1/ol.js" type="text/javascript"></script>
 <script id="loadScript" src="app.js"></script>
 </body>
